--- a/webapp/view/home/login.phtml
+++ b/webapp/view/home/login.phtml
@@ -22,7 +22,7 @@ Layout::includeLayout('header') ?>
 					<div class="panel panel-default">
 						<div class="panel-body">
 							<h3 class="thin text-center">Sign in to your account</h3>
-							<p class="text-center text-muted">Lorem ipsum dolor sit amet, <a href="signup.html">Register</a> adipisicing elit. Quo nulla quibusdam cum doloremque incidunt nemo sunt a tenetur omnis odio. </p>
+							<p class="text-center text-muted">Don't Have an account? <a href="signup.html">Register</a> here! </p>
 							<hr>
 							
 							<form>
