--- a/webapp/view/layout/header.phtml
+++ b/webapp/view/layout/header.phtml
@@ -12,13 +12,11 @@ use ArmoredCore\WebObjects\URL;
     <meta name="description" content="">
     <meta name="author"      content="Silvio Priem Mendes, PhD">
 
-    <title>Weblogic MVC</title>
+    <title>BlackJack</title>
 
     <?=AssetBundler::css()?>
 
-    <link rel="shortcut icon" href="<?= Asset::image('gt_favicon.png')?>">
-    <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <!-- Custom styles for our site template -->
+    
     <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css')?>" media="screen" >
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -35,21 +33,11 @@ use ArmoredCore\WebObjects\URL;
         <div class="navbar-header">
             <!-- Button for smallest screens -->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"><img src="<?= Asset::image('logo.png')?>" alt="WEBlogic MVC"></a>
+            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"><h1>BlackJack</h1></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active"><a href="<?= URL::toRoute('home/index')?>">Home</a></li>
-                <li><a href="<?= URL::toRoute('home/start')?>">Start</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">MVC Tools<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li class="active"><a href="<?=Url::toRoute('home/worksheet')?>">Worksheet</a></li>
-                        <li><a href="<?= Url::toRoute('devtools/restcontrollerform')?>">REST Style Resource controller generator</a></li>
-                        <li><a href="<?= Url::toRoute('devtools/accomponents')?>">Armored Core Components</a></li>
-                    </ul>
-                </li>
-                <li><a href="<?=URL::toRoute('plano/index')?>">Plano</a></li>
                 <li><a class="btn" href="<?= URL::toRoute('home/login')?>">SIGN IN / SIGN UP</a></li>
             </ul>
         </div><!--/.nav-collapse -->
