--- a/webapp/view/plano/show.phtml
+++ b/webapp/view/plano/show.phtml
@@ -1,74 +1,39 @@
 <?php
-
-include_once("\model\DossierEmprestimo.php");
-use ArmoredCore\WebObjects\View; //Fazer use da classe View no início do controlador
-use ArmoredCore\WebObjects\Post; 
-use ArmoredCore\WebObjects\Data;
-$vistaindex = Data::get('vistaindex') 
-
-if(isset($_POST['nome']) && $_POST['despesas'] && $_POST['credito'] && $_POST['numPrest'])
-{
-
-    calculaPlano($_POST['credito'],$_POST['numPrest']);   
-      
+include_once("\model\Game.php");
+// Establish defaults
+$gameOver = 0;
+$game = new Game();		// Create a new deck and start a new game
+/**clear all session variables if user plays again**/
+if (isset($_GET['again'])) {
 }
- function calculaPlano($credito, $numPrest){
-
-    $valorPrestacao = $credito/$numPrest;
-    $diasSemana = array('Domingo', 'Segunda', 'Terça', 'Quarta','Quinta','Sexta', 'Sábado');
-    $data = date("Y/m/d");
-    $time = strtotime(date("Y/m/d"));
-    $tabela = array();
-    array_push($tabela,$credito,$numPrest,$data,number_format((float)$valorPrestacao, 2, '.', ''));
-
-    for($i = 0; $i<$numPrest ; $i++) {
-
-        $time = strtotime($data);
-        $credito = $credito - $valorPrestacao;
-
-        if($diasSemana[date('w', strtotime($data))] == "Domingo")
-            $data = date("Y/m/d", strtotime("+1 day", $time));
-        else if($diasSemana[date('w', strtotime($data))] == "Sábado")
-            $data = date("Y/m/d", strtotime("+2 day", $time));
-
-        $infoLinhaTabela = array($i+1,$data,$diasSemana[date('w', strtotime($data))],number_format((float)$credito, 2, '.', ''));	  		
-        
-        array_push($tabela,$infoLinhaTabela);
-
-        $data = date("Y/m/d", strtotime("+1 month", $time));
+session_start();
+if (!isset($_GET['hit']) && !isset($_GET['stand'])) {
+    /**initial deal**/
+    $userHand[0] = $game->dealCard();
+    $dealerHand[0] = $game->dealCard();
+    $userHand[1] = $game->dealCard();
+    $dealerHand[1] = $game->dealCard();
+    $_SESSION['userHand'] = $userHand;
+    $_SESSION['dealerHand'] = $dealerHand;
+	$_SESSION['dHandValue'] = $game->getHandValue($_SESSION['dealerHand']);
+} else if (isset($_GET['hit'])) {
+    $_SESSION['userHand'][sizeof($_SESSION['userHand'])] = $game->dealCard();
+    $_SESSION['userValue'] = $game->getHandValue($_SESSION['userHand']);
+	$_SESSION['dHandValue'] = $game->getHandValue($_SESSION['dealerHand']);
+	$_SESSION['uHandValue'] = $game->getHandValue($_SESSION['userHand']);
+	// Auto-stand if at 21
+    if ($_SESSION['userValue'] == 21)
+		header("Location: index.php?stand=stand");
+	// Check if, by hitting, the game has ended
+	$gameOver = $game->winCheck($_SESSION['userValue'], $_SESSION['dHandValue'], 0);
+} else if (isset($_GET['stand'])) {
+    while ($_SESSION['dHandValue'] < 17) {
+        $_SESSION['dealerHand'][sizeof($_SESSION['dealerHand'])] = $game->dealCard();
+        $_SESSION['dHandValue'] = $game->getHandValue($_SESSION['dealerHand']);
+		$_SESSION['uHandValue'] = $game->getHandValue($_SESSION['userHand']);		
     }
-    ?>
-    <h1 style="text-align: center;">Plano de Pagamentos</h1>
-	<br>
-	<strong>Valor a contrair:</strong>€ <?php echo $tabela[0]; ?><br>
-	<strong>Número de prestações:</strong> <?php echo $tabela[1]; ?><br>
-	<strong>Data do empréstimo:</strong> <?php echo $tabela[2] ?><br>
-
-	<br>
-	<br>
-
-	<table border="1">
-
-		<tr style="background-color: grey;">
-		    <th>Nº Prest</th>
-		    <th>Data</th>
-		    <th>Valor Prest.</th> 
-		    <th>Dia Semana</th>
-		    <th>Valor em Dívida</th>
-	    </tr>
-
-	    
-	    <?php for($i = 4; $i<count($tabela) ; $i++) {?>
-		    <tr style="text-align: center;">
-		    	<td style="background-color: grey;"><?php echo $tabela[$i][0]; ?></td>
-		    	<td><?php echo $tabela[$i][1];  ?></td>
-		    	<td><?php echo $tabela[3];  ?></td> 
-		    	<td><?php echo $tabela[$i][2];  ?></td>
-		    	<td><?php echo $tabela[$i][3];  ?></td>
-		    	</tr>
-		<?php } ?>  		
-
-    </table>
-    
+	$gameOver = $game->winCheck($_SESSION['uHandValue'], $_SESSION['dHandValue'], 1);
+}
+?>
 }
 ?>
