--- a/webapp/view/home/about.phtml
+++ b/webapp/view/home/about.phtml
@@ -8,7 +8,8 @@ Layout::includeLayout('indexheader'); ?>
     <header id="head">
         <div class="container">
             <div class="row">
-                
+                <h1 class="lead"><b>WEBlogic Studio</b><br><small><b>Armored</b>Core v0.85</small><br>MVC Reference Framework</h1>
+                <p class="tagline">Developing better Apps. Creating better professionals.</p>
 
             </div>
         </div>
@@ -18,9 +19,23 @@ Layout::includeLayout('indexheader'); ?>
 
     <!-- Intro -->
     <div class="container text-center">
-                
+        <br>
+        <img width="25%" height="25%" src="<?=Asset::image('weblogos-small.png')?>">
+        <h2 class="thin">Learn Here . . . Work Everywhere.</h2>
+        <br>
+        <p class="text-muted">
+            Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
+        </p>
+        <h2 class="thin">Learn Today . . . Lead Tomorrow.</h2>
+
     </div>
     <!-- /Intro-->
+
+    <div class="jumbotron top-space">
+        <h5><span class="glyphicon glyphicon-cog">&nbsp;</span><strong>Armored Core Now Includes: </strong>
+            PSR-7 HTTP Messaging, PSR-11 Containers for IOC, PSR-15 HTTP Middleware and PSR-17 HTTP Factories
+        </h5>
+    </div>
 
     </div>
 
@@ -31,9 +46,12 @@ Layout::includeLayout('indexheader'); ?>
         <h3>Programação Web - Servidor</h3>
         <br>
         <p class="text-muted">
-            Made by Gonçalo Amaro, Joel Runa and Pedro Neves
+            Nome: Gonçalo Amaro
         </p>
-      
+        <p class="text-muted">
+            Nº de Estudante: 2170400
+        </p>
+
         <img width="25%" height="25%" src="<?=Asset::image('iplogo.jpg')?>"><h4 class="thin">Departamento de Engenharia Informática - Escola Superior de Tecnologia e Gestão - Instituto Politécnico de Leiria</h4>
 
     </div>
