--- a/webapp/view/layout/footer.phtml
+++ b/webapp/view/layout/footer.phtml
@@ -1,3 +1,23 @@
+<style>
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.footer1 {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.footer2 {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+</style>
 <footer id="footer" class="top-space">
 
     <div class="footer1">
