--- a/webapp/view/plano/index.phtml
+++ b/webapp/view/plano/index.phtml
@@ -1,54 +1,11 @@
-	<?php 
-	use ArmoredCore\WebObjects\Post;
-	use ArmoredCore\WebObjects\Layout;
-	use ArmoredCore\WebObjects\Footer;
-	Layout::includeLayout('indexheader');
+<?php 
+use ArmoredCore\WebObjects\Post;
+use ArmoredCore\WebObjects\Layout;
+use ArmoredCore\WebObjects\Footer;
+Layout::includeLayout('indexheader');?>
 
-	?>	
-<html>
-<head>
-<style type="text/css">
-	body {
-		margin:0px;
-	}
-</style>
-</head>
-<body>
-    <h2 style='text-align:center;'>Blackjack</h2>
-<div align='center' style="background-color:beige; padding:5px; width:300px; margin:auto;">
-    <div style="text-decoration:underline; font-weight:bold;">Your Hand is:</div><br/>
-    <?php 
-	// Show cards
-	for ($i = 0; $i < sizeof($_SESSION['userHand']); $i++) {
-        echo $game->translateCard($_SESSION['userHand'][$i]) . "<br />";
-    }
-    echo "<div style='text-decoration:underline; font-weight:bold;'><br /><br />Your opponents visible cards: </div><br />";
-	if ($gameOver == 0)
-	{
-		for ($j = 1; $j < sizeof($_SESSION['dealerHand']); $j++) {
-			echo $game->translateCard($_SESSION['dealerHand'][$j]) . "<br />";
-		}
-	}
-	else
-	{
-		for ($j = 0; $j < sizeof($_SESSION['dealerHand']); $j++) {
-			echo $game->translateCard($_SESSION['dealerHand'][$j]) . "<br />";
-		}
-	}
-	
-	echo "<br /><br />";
-    /**game is not over; reload screen like normal**/
-    if ($gameOver == 0){
-        echo '<form style=\'text-align:center\' action=\'index.php\' method=\'get\'>
-                      <input type=\'submit\' name=\'hit\' value=\'hit\'/><br />
-                      <input type=\'submit\' name=\'stand\' value=\'stand\'/></form>';
-    } /**Victory conditions are met; print final screen**/
-    else{
-      echo 'Your final score was: ' . $_SESSION['uHandValue'] . '<br /> Your opponents final score was: '.$_SESSION['dHandValue'].'
-            <form style=\'text-align:center\' action=\'index.php\' method=\'get\'>
-            <input type=\'submit\' name=\'again\' value=\'Play Again\'/></form>';
-    } ?>
-</div>
+
+
+
+
 <?php Layout::includeLayout('footer'); ?>
-</body>
-</html>
