--- a/webapp/view/layout/header.phtml
+++ b/webapp/view/layout/header.phtml
@@ -12,7 +12,7 @@ use ArmoredCore\WebObjects\URL;
     <meta name="description" content="">
     <meta name="author"      content="Silvio Priem Mendes, PhD">
 
-    <title>Weblogic MVC</title>
+    <title>BlackJack</title>
 
     <?=AssetBundler::css()?>
 
