--- a/webapp/view/layout/indexheader.phtml
+++ b/webapp/view/layout/indexheader.phtml
@@ -51,7 +51,7 @@ use ArmoredCore\WebObjects\URL;
                     </ul>
                 </li>
                 <li><a href="<?= URL::toRoute('home/about')?>">About</a></li>
-                <li><a class="btn" href="<?= URL::toRoute('plano/index')?>">Index</a></li>
+                <li><a class="btn" href="<?= URL::toRoute('plano/game')?>">Start Game</a></li>
                 <li><a class="btn" href="<?= URL::toRoute('home/login')?>">SIGN IN / SIGN UP</a></li>
             </ul>
         </div><!--/.nav-collapse -->
