Alterações em todo o código
Login a Funcionar
Routers de todos os Homes
Eliminado Modelos a mais
Funções dos Jogos criadas
Header para o jogo
Função das Cartas criadas
Menu do Jogo criado
Organização do Código

--- a/webapp/view/home/login.phtml
+++ b/webapp/view/home/login.phtml
@@ -1,7 +1,7 @@
 <?php use ArmoredCore\WebObjects\Layout;
 
-Layout::includeLayout('header') ?>
-
+Layout::includeLayout('indexheader') ?>
+<br></br><br></br>
 	<!-- container -->
 	<div class="container">
 
@@ -42,7 +42,7 @@ Layout::includeLayout('header') ?>
 										<b><a href="">Forgot password?</a></b>
 									</div>
 									<div class="col-lg-4 text-right">
-										<button class="btn btn-action" type="submit">Sign in</button>
+										<a href="gamemenu">Sign In</a>
 									</div>
 								</div>
 							</form>
