--- a/webapp/view/layout/footer.phtml
+++ b/webapp/view/layout/footer.phtml
@@ -1,14 +1,11 @@
-<style>
+0<style>
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
 }
-<<<<<<< HEAD
-=======
 
->>>>>>> 8d999d5ecbf301dfcd7d3cc43ec79a3abfb76780
 .footer2 {
     position: fixed;
     left: 0;
@@ -17,10 +14,7 @@
 }
 </style>
 <footer id="footer" class="top-space">
-<<<<<<< HEAD
 
-=======
->>>>>>> 8d999d5ecbf301dfcd7d3cc43ec79a3abfb76780
 <div class="footer2">
     <div class="container">
         <div class="row">
