--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -1,6 +1,20 @@
 <?php
-//Array with all the cards
-$cards = array("\public\img\cardClubs2");
-$size = sizeof($cards);
-echo "$size";
+
+//Array Cartas
+$Cartas = array("cardClubs2.png", "cardClubs3.png", "cardClubs4", "cardClubs5", "cardClubs6.", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "8_cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
+
+
+//Fazer Cartas Random
+for($x=0; $x<52; $x++){
+	//Fazer random cartas para o jogador
+
+
+	$rand_key = array_rand($Cartas, 1);
+	$rand_card = $Cartas[$rand_key];
+echo"
+<p> 
+$rand_key	<img src=\"img/$rand_card\" width=\"180\" height=\"232\" />
+</p>
+";
+}
 ?>
