--- a/webapp/view/layout/header.phtml
+++ b/webapp/view/layout/header.phtml
@@ -21,11 +21,10 @@ use ArmoredCore\WebObjects\URL;
     <!-- Custom styles for our site template -->
     <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css')?>" media="screen" >
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+    
     <script src="<?= Asset::js('html5shiv.js')?>"></script>
     <script src="<?= Asset::js('respond.min.js')?>"></script>
-    <![endif]-->
+  
 </head>
 
 <body class="home">
@@ -35,7 +34,7 @@ use ArmoredCore\WebObjects\URL;
         <div class="navbar-header">
             <!-- Button for smallest screens -->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"><img src="<?= Asset::image('logo.png')?>" alt="WEBlogic MVC"></a>
+            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"<h1>BlackJack</h1></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
