--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -31,7 +31,7 @@ Layout::includeLayout('headermenugame');
 <h2>
     Bem Vindo, 
 <div></div>
-   <span><a href="Painel.php" class="Fade">Alterar Perfil</a> // <a href="Painel.php?sair=sair" class="Fade">Sair</a></span>
+   <span><a href="index.phtml" class="Fade">Alterar Perfil</a> // <a href="index.phtml" class="Fade">Sair</a></span>
    </h2> 
    <div id="header-icon"></div><!-- ICON HEADER -->
 
