--- a/webapp/view/layout/footer.phtml
+++ b/webapp/view/layout/footer.phtml
@@ -18,12 +18,12 @@
 <div class="footer2">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 widget">
+            
                 <div class="widget-body">
-                    <p class="text-left">
-                    Gonçalo Amaro, Joel Runa, Pedro Neves <br>
+                    <p class="text-center">
+                   Elaborado por Gonçalo Amaro, Joel Runa, Pedro Neves 2017/2018
                     </p>
-                </div>
+                
             </div>
 
         </div> <!-- /row of widgets -->
