--- a/webapp/view/layout/headermenugame.phtml
+++ b/webapp/view/layout/headermenugame.phtml
@@ -33,7 +33,7 @@ use ArmoredCore\WebObjects\URL;
         <div class="navbar-header">
             <!-- Button for smallest screens -->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"<h1>BlackJack</h1> </a>
+            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"BlackJack </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
