--- a/webapp/view/home/stand.phtml
+++ b/webapp/view/home/stand.phtml
@@ -57,9 +57,7 @@ if(isset($_GET['action'])) $action = $_GET['action'];
 	echo "<br><br> <br> Player Cards:<br>";
 	foreach($_SESSION['game']->Cards['Player'] as $card) 
 	echo "
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
-	
-	";
+	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />";
 
 	echo "<br>Player Score: ".$_SESSION['game']->Scores['Player'];
 	// Options
