--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -3,6 +3,9 @@ use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 
+
+Layout::includeLayout('headermenugame') 
+
 ?>
 
 <br></br>
