--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -26,12 +26,12 @@ Layout::includeLayout('headermenugame');
 
 <div id="header">
 
-<div id="header-logo"></div><!-- LOGO MARCA -->
+<div id="header-logo"></div>
 
 <h2>
     Bem Vindo, 
 <div></div>
-   <span><a href="index.phtml" class="Fade">Alterar Perfil</a> // <a href="index.phtml" class="Fade">Sair</a></span>
+   <span><a href="index" class="Fade">Sair</a></span>
    </h2> 
    <div id="header-icon"></div><!-- ICON HEADER -->
 
@@ -40,7 +40,7 @@ Layout::includeLayout('headermenugame');
 
 
 <div id="menu">
-<ul>
+<ul>  
    <li><a href="index" class="Fade">Página Inicial</a></li>
    <li><a href="Painel.php?Pag=EditarPerfil" class="Fade">Alterar Perfil</a></li>
    <li><a href="about" class="Fade">Sobre</a></li>
