--- a/webapp/view/home/signup.phtml
+++ b/webapp/view/home/signup.phtml
@@ -1,6 +1,8 @@
-<?php use ArmoredCore\WebObjects\Layout;
+<?php 
+use ArmoredCore\WebObjects\Layout;
 
-Layout::includeLayout('indexheader') ?>
+Layout::includeLayout('indexheader') 
+?>
 <br></br><br></br>
 	<!-- container -->
 	<div class="container">
@@ -21,8 +23,7 @@ Layout::includeLayout('indexheader') ?>
 				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
 					<div class="panel panel-default">
 						<div class="panel-body">
-							<h3 class="thin text-center">Sign in to your account</h3>
-							<p class="text-center text-muted">Or <a href="signup">Create an account</a> now for free! </p>
+							<h3 class="thin text-center">Create an Account</h3>
 							<hr>
 							
 							<form>
@@ -32,14 +33,12 @@ Layout::includeLayout('indexheader') ?>
 								</div>
 								<div class="top-margin">
 									<label>Password <span class="text-danger">*</span></label>
-									<input type="password" class="form-control">
+									<input type="password" id="password" class="form-control" required > <br>
 								</div>
-
-								<hr>
-
 								<div class="row">
+									
 									<div class="text-right" style="margin-right: 20px";>
-										<a href="gamemenu">Sign In</a>
+										<a href="gamemenu">Sign Up</a>
 									</div>
 								</div>
 							</form>
