--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -4,18 +4,19 @@ use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 Layout::includeLayout('indexheader'); ?>
 
-    
-  
+
+  <body class="fundo" style="background-color: #8B7500">
         <div class="container">
           <div class="Head" style="padding-top: 100px">
             <div class="row" style="text-align: center">
-                <img src="<?= Asset::image('Games_BlackJack.png')?>" alt="WEBlogic MVC">
-                <h1 class="lead"><b>BlackJack</b><br><small><b>Armored</b>Core v0.85</small><br>MVC Reference Framework</h1>
-                <p class="tagline">Developing better Apps. Creating better professionals.</p>
-                <p class="small">By<i> Sílvio Priem Mendes, PhD</i></p>
+                <img width="650" height="180" src="<?= Asset::image('Games_BlackJack.png')?>">
+                <h1 class="lead"><br><small><b>Professor: Nuno Duarte</b></small><br>
+                <p class="tagline"><b>Programação Web-Servidor</b>
+
             </div>
         </div>
 </div>
+</body>
 
     </div>
 
