--- a/webapp/view/layout/headermenugame.phtml
+++ b/webapp/view/layout/headermenugame.phtml
@@ -26,7 +26,8 @@ use ArmoredCore\WebObjects\URL;
 
 </head>
 
-<body class="home">
+<body class="home" style="background-color: gold">
+
 <!-- Fixed navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top headroom" >
     <div class="container">
