--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -5,13 +5,16 @@ use ArmoredCore\WebObjects\URL;
 Layout::includeLayout('indexheader'); ?>
 
 
-  <body class="fundo" style="background-color: #8B7500">
+  <body class="fundo"  style="background-color: #330000">
         <div class="container">
           <div class="Head" style="padding-top: 100px">
             <div class="row" style="text-align: center">
-                <img width="650" height="180" src="<?= Asset::image('Games_BlackJack.png')?>">
+                <img width="650" height="180" src="<?= Asset::image('Games_BlackJack.png')?> " style="margin-top: 100px">
                 <h1 class="lead"><br><small><b>Professor: Nuno Duarte</b></small><br>
                 <p class="tagline"><b>Programação Web-Servidor</b>
+                    <div class="ipleiria" style="margin-left:-1350px; margin-top: 170px;">
+                     <img width="200" height="55" src="<?= Asset::image('IPLeiria.png')?> " style="margin-left: 0px">
+                 </div>
 
             </div>
         </div>
