--- a/webapp/view/home/about.phtml
+++ b/webapp/view/home/about.phtml
@@ -2,12 +2,12 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('indexheader'); ?>
+Layout::includeLayout('LayoutAbout'); ?>
 
     <!-- Header -->
  
         <div class="container">
-       
+            <div class="row"><
                 <h3 class="lead"><b><i>REGRAS</i></b>                </h3>
                 <p class="text-muted">
             Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
