--- a/webapp/view/layout/headermenugame.phtml
+++ b/webapp/view/layout/headermenugame.phtml
@@ -19,7 +19,7 @@ use ArmoredCore\WebObjects\URL;
     <link rel="shortcut icon" href="<?= Asset::image('gt_favicon.png')?>">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <!-- Custom styles for our site template -->
-    <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css')?>" media="screen" >
+    <link rel="stylesheet" href="<?= Asset::css('/bootstrap.css')?>" media="screen" >
   
     <script src="<?= Asset::js('html5shiv.js')?>"></script>
     <script src="<?= Asset::js('respond.min.js')?>"></script>
