Mudanças no Game Menu

--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -18,35 +18,17 @@ Layout::includeLayout('headermenugame');
 <body>
 <br>
 </br>
-<br>
-</br>
-<br>
-</br>
-
-
-<div id="header">
-
-<div id="header-logo"></div>
-
-<h2>
-    Bem Vindo, 
-<div></div>
-   <span><a href="index" class="Fade">Sair</a></span>
-   </h2> 
-   <div id="header-icon"></div><!-- ICON HEADER -->
-
-</div><!-- HEDAER PAINEL -->
+   
 
 
 
-<div id="menu">
-<ul>  
-   <li><a href="index" class="Fade">Página Inicial</a></li>
-   <li><a href="Painel.php?Pag=EditarPerfil" class="Fade">Alterar Perfil</a></li>
-   <li><a href="about" class="Fade">Sobre</a></li>
-   <li><a href="game" class="Fade">Começar Jogo</a></li>
-   </ul>
-</div><!-- MENU -->
+
+<div id="menu" style="text-align: center;margin-right: auto;margin-left: auto">
+   <button><a href="index" class="Fade">Sair</a></button> <br>
+   <button><a href="index" class="Fade">Página Inicial</a></button><br>
+   <button><a href="about" class="Fade">Sobre</a></button><br>
+   <button><a href="game" class="Fade">Começar Jogo</a></button><br>
+</div>
 
 <div id="content">
 
