--- a/webapp/view/layout/header.phtml
+++ b/webapp/view/layout/header.phtml
@@ -28,7 +28,7 @@ use ArmoredCore\WebObjects\URL;
     <![endif]-->
 </head>
 
-<body class="home" style="background-color: gold">
+<body class="home>
 
 <!-- Fixed navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top headroom" >
