--- a/webapp/view/layout/headermenugame.phtml
+++ b/webapp/view/layout/headermenugame.phtml
@@ -1,51 +1,43 @@
 <?php
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\Facades\AssetBundler;
+use ArmoredCore\Facades\DebugRenderer;
 use ArmoredCore\WebObjects\URL;
 ?>
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport"    content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author"      content="Silvio Priem Mendes, PhD">
 
-    <title>BlackJack</title>
+   <title>Blackjack</title>
 
     <?=AssetBundler::css()?>
 
-    <link rel="shortcut icon" href="<?= Asset::image('gt_favicon.png')?>">
-    <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <!-- Custom styles for our site template -->
-    <link rel="stylesheet" href="<?= Asset::css('/bootstrap.css')?>" media="screen" >
-  
-    <script src="<?= Asset::js('html5shiv.js')?>"></script>
-    <script src="<?= Asset::js('respond.min.js')?>"></script>
+        <link rel="shortcut icon" href="<?= Asset::image('gt_favicon.png')?>">
+        <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+        <!-- Custom styles for our site template -->
+        <link rel="stylesheet" href="<?= Asset::css('/bootstrap.css')?>" media="screen" >
+
 
 </head>
 
-<body class="home" style="background-color: gold">
-
+<body class="home">
 <!-- Fixed navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top headroom" >
     <div class="container">
         <div class="navbar-header">
             <!-- Button for smallest screens -->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"BlackJack </a>
+            <a class="navbar-brand" href="<?= URL::toRoute('home/index')?>"><img width="130" height="45" src="<?= Asset::image('blackjack.png')?>" alt="BlackJack"></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
-                <li><a href="<?= URL::toRoute('home/about')?>">About</a></li>
-                <li class="active"><a href="<?= URL::toRoute('home/index')?>">Home</a></li>
-                </ul>
+                <li class="active"><a href="<?= URL::toRoute('home/index')?>">HOME</a></li>
                 </li>
-                
+                <li><a href="<?= URL::toRoute('home/about')?>">ABOUT</a></li>
+                <li><a class="btn" href="<?= URL::toRoute('home/login')?>">SIGN IN / SIGN UP</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </div>
 <!-- /.navbar -->
-<header id="head" class="secondary"></header>
