About, Botoes, layouthome criado

--- a/webapp/view/home/about.phtml
+++ b/webapp/view/home/about.phtml
@@ -7,22 +7,28 @@ Layout::includeLayout('LayoutAbout'); ?>
     <!-- Header -->
  
         <div class="container">
-            <div class="row"><
-                <h3 class="lead"><b><i>REGRAS</i></b>                </h3>
+            <div class="row">
+                <br></br>
+                <br></br>
+                <h3 class="title" style="text-align: center"><b><i>REGRAS</i></b></h3>
                 <p class="text-muted">
-            Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
-        </p>
-                <h3 class="lead"><b><i>REGRAS</i></b>                </h3>
-                <p class="text-muted">
-            Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
-        </p>
-                <h3 class="lead"><b><i>REGRAS</i></b>                </h3>
-                <p class="text-muted">
-            Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
-        </p>
-                <h3 class="lead"><b><i>REGRAS</i></b>                </h3>
-                <p class="text-muted">
-            Perfection is achieved, not when there is nothing more to add, but when there is nothing left to take away.
-        </p>
+                Em cada ronda de blackjack, os jogadores que estão sentados na mesa começam por apostar nas respectivas posições de apostas, também conhecidas como 'boxes'. Cada mesa define de modo claro o valor mínimo e máximo que os jogadores podem apostar. O tamanho das apostas pode ser escolhido clicando no ícone das fichas que representa o valor da aposta pretendida. Depois de todas as apostas estarem feitas, os jogadores irão receber duas cartas viradas para cima à frente das suas boxes e o dealer receberá ou uma carta (estilo europeu) ou duas cartas com uma carta virada para cima e outra para baixo (estilo Atlantic City), dependendo da variante que estão a jogar.
+
+                O objectivo em qualquer mão de blackjack é ganhar ao dealer. Para o conseguir, tem de conseguir uma mão mais alta do que a mão do dealer, mas que não ultrapasse o valor total de 21. Por outro lado, pode também ganhar se conseguir uma classificação inferior a 22, quando o valor da mão do dealer ultrapassar os 21. Quando o valor total da sua mão for 22 ou mais, mais conhecido como 'busting' (rebentar), perderá automaticamente todo o dinheiro apostado.
+
+                Quando solicitado, pode pedir cartas para a sua mão (ou mãos) para aumentar o seu valor total. Quando parar de pedir cartas, o dealer completa a sua mão. Há regras rígidas sobre como fazê-lo, que diferem consoante a variante de blackjack que estiver a jogar. Certifique-se de que compreende as regras de cada variante, dado que esse é um aspecto importante na forma como o blackjack é jogado e que lhe permite tomar decisões estratégicas importantes em cada mão.
+
+                A melhor mão no blackjack é, sem surpresas, o 'blackjack'. A melhor mão do jogo paga mais que qualquer outra combinação (até 3:2 da sua aposta, dependendo da variante de jogo que está a jogar) e é constituída por um ás e qualquer carta com valor até dez – incluindo um valete, uma dama, um rei ou um dez. Para contar, o blackjack tem de ser dado nas duas primeiras cartas que recebe e é imbatível. Pode, contudo, empatar se a mão do dealer for também um blackjack.
+
+                No blackjack, os dez, valetes, damas e reis valem todos dez. Os ases podem ter dois valores diferentes, ou um ou onze (fica ao seu critério). Por exemplo, quando combina um ás com um quatro, a sua mão pode valer cinco ou 15. Sempre que um ás tem o valor de 11, diz-se que o total mais elevado é um total 'soft', por isso no exemplo dado, 15 seria um 'soft 15'. Os jogadores podem pedir mais uma carta, ou 'pedir', ou desdobrar uma mão soft sem correr o risco de rebentar. Contudo, não é garantido que uma mão soft melhore depois de pedir outra carta.
+
+                As mãos vencedoras no blackjack pagam um-para-um (1:1), também conhecido como ‘even money’. Por conseguinte, se apostar €20 e ganhar a sua mão, receberá normalmente €20 de lucro sobre a sua aposta inicial. Se receber um blackjack numa variante de jogo que pague 3:2, pode receber um lucro de €30 sobre a sua aposta inicial se o dealer não acertar também no blackjack.
+
+                Sempre que a sua mão empatar com a do dealer, trata-se de um 'empate'. Se isso acontecer, a sua aposta será devolvida mas não vai ganhar dinheiro adicional. Se perder a sua mão, perde a sua aposta para a casa. Há excepções para estas regras gerais, que são referidas abaixo e em cada página das regras de cada variante de jogo.
+
+                Normalmente, vai receber os ganhos da sua aposta depois de o dealer completar a sua mão. É muito importante que leia as regras de cada variante para conhecer as suas diferenças específicas, pois as regras sob as quais o dealer joga e paga são rígidas e diferem frequentemente.
+                </p>
+                <h3 class="title" style="text-align: center"><b><i>VALOR DAS CARTAS</i></b>                </h3>
+                <img width="1200" height="550" src="<?= Asset::image('valordascartas.jpg')?>" alt="valor das cartas"></a>
             </div>
 <?php Layout::includeLayout('footer')?>
