--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -2,8 +2,7 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('indexheader'); ?>
-
+Layout::includeLayout('LayoutHome'); ?>
 
   <body class="fundo"  style="background-color: #330000">
         <div class="container">
@@ -15,16 +14,8 @@ Layout::includeLayout('indexheader'); ?>
                     <div class="ipleiria" style="margin-left:-1350px; margin-top: 170px;">
                      <img width="200" height="55" src="<?= Asset::image('IPLeiria.png')?> " style="margin-left: 0px">
                  </div>
-
             </div>
         </div>
-</div>
+    </div>
 </body>
-
-    </div>
-
-    </div>
-
-  
-
 <?php Layout::includeLayout('footer')?>
