--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -14,20 +14,13 @@ Layout::includeLayout('headermenugame');
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BlackJack</title>
 </head>
-
 <body>
-<br>
-</br>
-   
-
-
-
-
+<br></br>
+<br></br>
+<br></br>
 <div id="menu" style="text-align: center;margin-right: auto;margin-left: auto">
-   <button><a href="index" class="Fade">Sair</a></button> <br>
-   <button><a href="index" class="Fade">Página Inicial</a></button><br>
-   <button><a href="about" class="Fade">Sobre</a></button><br>
-   <button><a href="game" class="Fade">Começar Jogo</a></button><br>
+   <button><a href="index" class="Fade">Sair</a></button><br></br>
+   <button><a href="game" class="Fade">Começar Jogo</a></button><br></br>
 </div>
 
 <div id="content">
