--- a/webapp/view/home/gamemenu.phtml
+++ b/webapp/view/home/gamemenu.phtml
@@ -2,9 +2,8 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('headermenugame');
 
-?>
+Layout::includeLayout('LayoutHeader')?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,4 +30,4 @@ Layout::includeLayout('headermenugame');
 
 
 
-<?php Layout::includeLayout('footer'); ?>
+<?php Layout::includeLayout('LayoutFooter'); ?>
