--- a/webapp/view/home/signup.phtml
+++ b/webapp/view/home/signup.phtml
@@ -1,9 +1,10 @@
 <?php 
 use ArmoredCore\WebObjects\Layout;
 
-Layout::includeLayout('indexheader') 
-?>
-<br></br><br></br>
+Layout::includeLayout('LayoutHeader')?>
+
+<br></br>
+<br></br>
 	<!-- container -->
 	<div class="container">
 
@@ -53,4 +54,4 @@ Layout::includeLayout('indexheader')
 		</div>
 	</div>	<!-- /container -->
 
-<?php Layout::includeLayout('footer') ?>
+<?php Layout::includeLayout('LayoutFooter') ?>
