--- a/webapp/view/home/stand.phtml
+++ b/webapp/view/home/stand.phtml
@@ -2,8 +2,8 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('headermenugame') 
-?>
+
+Layout::includeLayout('Header')?>
 
 <br></br><br></br><br></br>
 <?php
