--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -3,10 +3,7 @@ use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 
-
-Layout::includeLayout('headermenugame') 
-
-?>
+Layout::includeLayout('LayoutHeader')?>
 
 <br></br>
 <br></br>
