--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -2,16 +2,17 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('LayoutHome'); ?>
 
-  <body class="fundo"   style="background-color: #330000">
+Layout::includeLayout('LayoutHome')?>
+
+  <body class="fundo"   style="background-color: white">
     <br>
         <div class="container">
           <div class="Head" style="padding-top: 100px">
             <div class="row" style="text-align: center">
                 <img width="650" height="180" src="<?= Asset::image('Games_BlackJack.png')?> " style="margin-top: 100px">
-                <h1 class="lead"><br><small><b>Professor: Nuno Duarte</b></small><br>
-                <p class="tagline"><b>Programação Web-Servidor</b>
+                <h1 class="lead"><br><small><b><i>Professor: Nuno Duarte</i></b></small><br>
+                <p class="tagline"><b><i>Programação Web-Servidor</i></b>
                     <div class="ipleiria" style="margin-left:-1330px; margin-top: 138px;">
                      <img width="200" height="55" src="<?= Asset::image('IPLeiria.png')?> " style="margin-left: 0px">
                  </div>
@@ -19,4 +20,4 @@ Layout::includeLayout('LayoutHome'); ?>
         </div>
     </div>
 </body>
-<?php Layout::includeLayout('footer')?>
+<?php Layout::includeLayout('LayoutFooter')?>
