--- a/webapp/view/home/login.phtml
+++ b/webapp/view/home/login.phtml
@@ -1,7 +1,10 @@
-<?php use ArmoredCore\WebObjects\Layout;
+<?php 
+use ArmoredCore\WebObjects\Layout;
 
-Layout::includeLayout('indexheader') ?>
-<br></br><br></br>
+Layout::includeLayout('LayoutHeader')?>
+
+<br></br>
+<br></br>
 	<!-- container -->
 	<div class="container">
 
@@ -54,4 +57,4 @@ Layout::includeLayout('indexheader') ?>
 		</div>
 	</div>	<!-- /container -->
 
-<?php Layout::includeLayout('footer') ?>
+<?php Layout::includeLayout('LayoutFooter') ?>
