--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -1,4 +1,23 @@
 <?php
+echo"<!DOCTYPE html>
+<head>
+
+<script>
+	$( document ).ready(function(){
+		$('#hitSubmitButton').click(function (evt){
+			evt.preventDefault(); //stops the submit taking place
+			var myQuery = $('#queryText').val(); //get the query value
+
+			//load data received from the php script to the game
+			$('#player_cards_container').load('loadcard.php', { query:null, anotherVar:null });
+		});
+	});
+	//Draw or Stand
+</script>
+
+</head>
+<body>";
+
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
@@ -11,7 +30,9 @@ Layout::includeLayout('LayoutHeader')?>
 	$CardsArray = array("cardClubs2", "cardClubs3", "cardClubs4", "cardClubs5", "cardClubs6", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9.", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
 	//Stand/Hit...
 	$action = 'new';
-	
+?>
+
+<?php
 	//Soma começa a 0
 
 	$player_sum = 0;
@@ -55,13 +76,22 @@ Layout::includeLayout('LayoutHeader')?>
 		}
 	
 	echo "Dealer Cards:<br>";
+
 	foreach($_SESSION['game']->Cards['Dealer'] as $card)
 	echo "
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card1\" width=\"180\" height=\"232\" />	";
 	echo "<br>Dealer Score: ".$_SESSION['game']->Scores['Dealer'];
-
-	echo "<br><br> <br> Player Cards:<br>";
+	
+?>	
+<input id="querySubmitButton" type="button" value="Test Hit">
+<div id="player_cards_container"></div>
+		
+	
+	
+<?php
+	echo "<br><br> <br>
+	Player Cards:<br>";
 	foreach($_SESSION['game']->Cards['Player'] as $card) 
 	echo "
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
@@ -71,6 +101,8 @@ Layout::includeLayout('LayoutHeader')?>
 	echo "<br>Player Score: ".$_SESSION['game']->Scores['Player'];
 	// Options
 	if($_SESSION['game']->Scores['Player'] < 21) echo "<br><a href='hit'>[Hit]</a>";
+
+
 	echo "<br><a href='stand'>[Stand]</a><br><a href='novojogo'>[New]</a>";
 	
 	if($_SESSION['game']->GameEnd == 1)
