--- a/webapp/view/home/hit.phtml
+++ b/webapp/view/home/hit.phtml
@@ -1,89 +1,30 @@
 <?php
-use ArmoredCore\WebObjects\Asset;
-use ArmoredCore\WebObjects\Layout;
-use ArmoredCore\WebObjects\URL;
 
-Layout::includeLayout('LayoutHeader')?>
+	ini_set('arg_separator.output', '&amp;');
+	if(isset($_SESSION['game'])){
+		$CardsArray = $_SESSION['game'];
 
-<br></br>
-<br></br>
-<?php
-	$DECK = array();
-	$CardsArray = array("cardClubs2", "cardClubs3", "cardClubs4", "cardClubs5", "cardClubs6", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9.", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
-	//Stand/Hit...
-	$action = 'new';
+		//Check size
+		$size = sizeof($CardsArray);
 
-	//Cartas
+		//Draw Card
+		//Draw Random Card For Plauer
+		$rand_keys = array_push($CardsArray, 1);
+		$rand_card = $CardsArray[$rand_keys];
 
-	$player_cards = array("","");
-	$dealer_cards = array("","");
-	//Soma começa a 0
+		//Remove from array
+		unset($CardsArray[$rand_keys]);
 
-	$player_sum = 0;
-	$dealer_sum = 0;
+		if($size == "47"){
+			//Draw Card
+			$rand_card = "$rand_card";
+			$_SESSION['rand_card'] = $rand_card;
+		}
 
-	//Shuffle the Cards
-	for($x=0; $x<1; $x++){
+		echo"
+		<img src=\"http://localhost/BlackJack/public/img/Cards/cardClubs2.png\" width=\"180\" height=\"232\" />
+		";
 
-		//Generate the first 2 cards
-		$rand_key = array_rand($CardsArray, 1);
-		$rand_card = $CardsArray[$rand_key];
-
-		//Generate 1 random card to dealer
-		$rand_key1 = array_rand($CardsArray, 1);
-		$rand_card1 = $CardsArray[$rand_key1];
-		
-		//Generate 1 random card to player
-		$rand_key2 = array_rand($CardsArray, 1);
-		$rand_card2 = $CardsArray[$rand_key2];
-
-		$rand_key3 = array_rand($CardsArray, 1);
-		$rand_card3 = $CardsArray[$rand_key3];
 	}
-	if(isset($_GET['action'])) $action = $_GET['action'];
-	
-		if($action == 'new') {
-			$_SESSION['game'] = new Blackjack();
-			$_SESSION['game']->addCard('Player');
-			$_SESSION['game']->addCard('Dealer');
-		} 
-		
-		if($action == 'hit') {
-			if($_SESSION['game']->Scores['Player'] < 21) {
-				$_SESSION['game']->addCard('Player', 1);	
-				if($_SESSION['game']->Scores['Player'] > 21) $_SESSION['game']->playDealer();
-			}
-		}
-		
-		if($action == 'stand') {
-			$_SESSION['game']->playDealer();
-		}
-	
-	echo "Dealer Cards:<br>";
-	foreach($_SESSION['game']->Cards['Dealer'] as $card)
-	echo "
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card1\" width=\"180\" height=\"232\" />	
-	";
-	echo "<br>Dealer Score: ".$_SESSION['game']->Scores['Dealer'];
-
-	echo "<br><br> <br> Player Cards:<br>";
-	foreach($_SESSION['game']->Cards['Player'] as $card) 
-	echo "
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />
-	";
-
-	echo "<br>Player Score: ".$_SESSION['game']->Scores['Player'];
-	// Options
-	if($_SESSION['game']->Scores['Player'] < 21) echo "<br><a href='hit'>[Hit]</a>";
-	echo "<br><a href='stand'>[Stand]</a><br><a href='?action=new'>[New]</a>";
-	
-	if($_SESSION['game']->GameEnd == 1)
-	echo "<br>Game Result: ".$_SESSION['game']->getResult();
-
 
 ?>
-
-	
-	
