--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -4,14 +4,30 @@ use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 
 Layout::includeLayout('LayoutHeader')?>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+</script>
+<script src="my_jquery_functions.js">
+	
+</script>
 <br></br>
 <br></br>
 <?php
 	$CardsArray = array("cardClubs2", "cardClubs3", "cardClubs4", "cardClubs5", "cardClubs6", "cardClubs7", "cardClubs8", "cardClubs9", "cardClubs10", "cardClubsA", "cardClubsJ", "cardClubsK", "cardClubsQ", "cardDiamonds2", "cardDiamonds3", "cardDiamonds4", "cardDiamonds5", "cardDiamonds6", "cardDiamonds7", "cardDiamonds8", "cardDiamonds9", "cardDiamonds10", "cardDiamondsA", "cardDiamondsJ", "cardDiamondsK", "cardDiamondsQ", "cardHearts2", "cardHearts3", "cardHearts4", "cardHearts5", "cardHearts6", "cardHearts7", "cardHearts8", "cardHearts9.", "cardHearts10", "cardHeartsA", "cardHeartsJ", "cardHeartsK", "cardHeartsQ", "cardSpades2", "cardSpades3", "cardSpades4", "cardSpades5", "cardSpades6", "cardSpades7", "cardSpades8", "cardSpades9", "cardSpades10", "cardSpadesA", "cardSpadesJ", "cardSpadesK", "cardSpadesQ");
 	//Stand/Hit...
 	$action = 'new';
+?>
+<script>
+	$( function(){
+	$('#button').click(function()
+			{
+			$('#player_cards_container').load('loadcard');
+			}
+		);
+	});
 	
+	//Draw or Stand
+</script>
+<?php
 	//Soma começa a 0
 
 	$player_sum = 0;
@@ -67,7 +83,12 @@ Layout::includeLayout('LayoutHeader')?>
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />
 	";
+?>
 
+	<div id="player_cards_container">
+	<button id="button"  data-role="button">Click on button</button>
+	</div>      
+<?php
 	echo "<br>Player Score: ".$_SESSION['game']->Scores['Player'];
 	// Options
 	if($_SESSION['game']->Scores['Player'] < 21) echo "<br><a href='hit'>[Hit]</a>";
